--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,47 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
 
-    You can write your own styles here...
+body {
+    background-image: url(https://cdn.pixabay.com/photo/2018/06/30/09/29/monkey-3507317_1280.jpg);
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
     
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    background-size: 25px 50px;
+    background-size: 100% 100%;
+  
     
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
+}
+.container {
+    color: black;
+    width: 50%;
     
-    import 'relative/path/to/stylesheet.scss';
+    justify-content: center;
+    font-size: 16px;
+    background-color: gray;
+    opacity: 0.8;
+    border-radius: 3%;
+    
+}
 
-*/
+.btn {
+    width: 5rem;
+    height: 2rem;
+    color: black;
+    background-color: white;
+    align-items: center ;
+}
+.h1 {
+    align-items: center;
+    justify-content: center;
+}
+.buttonPosition{
+    display: flex;
+    justify-content: space-between;
+    
+}
